# Planetarium

./: .gitignore  detection_etoiles.cpp  detection_etoiles.h  main.cpp  testRRDM.cpp  testRRDM.h  writeText.cpp
CatalogMaker/: catalog_test.pro  catalog_test.pro.user.dcf0b59  main.cpp  mainwindow.cpp  mainwindow.h  structures.cpp  structures.h
ConversionSphere/: CMakeLists.txt  main_conversion.cpp  main_conversion.h
DetectionPhoto/: main.cpp
Exemple/: Affichage.cpp  CMakeLists.txt  CMakeLists.txt~  correspondence.h  detection_etoiles.cpp  detection_etoiles.h  detection_etoiles.h~  main.cpp  main.cpp~  star.cpp  testRRDM.cpp  testRRDM.cpp~  utilitaires.cpp  utilitaires.cpp~  utilitaires.h  utilitaires.h~  writeText.h
Interactions/: Interactions.pro
Interactions/include/: star.h
Interactions/src/: correspondence.cpp  star.cpp
